{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 787,
  "lineage": "2cea78a8-61dd-08ce-c499-00e0eac0c87b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kxc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725492449:internet-gateway/igw-0f70691d7a9918fbd",
            "id": "igw-0f70691d7a9918fbd",
            "owner_id": "851725492449",
            "tags": {
              "Name": "kxc-igw"
            },
            "tags_all": {
              "Name": "kxc-igw"
            },
            "vpc_id": "vpc-0abd1178eea036236"
          },
          "dependencies": [
            "aws_vpc.kxc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "kxc-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:851725492449:loadbalancer/app/lxc-alb/285d543fe5537b76",
            "arn_suffix": "app/lxc-alb/285d543fe5537b76",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lxc-alb-209132493.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:851725492449:loadbalancer/app/lxc-alb/285d543fe5537b76",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lxc-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ee08455e1bd6c017"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0937020afc4682302"
              },
              {
                "subnet_id": "subnet-0a6536bfe02d1c2a1"
              },
              {
                "subnet_id": "subnet-0a867f2dee6d36409"
              }
            ],
            "subnets": [
              "subnet-0937020afc4682302",
              "subnet-0a6536bfe02d1c2a1",
              "subnet-0a867f2dee6d36409"
            ],
            "tags": {
              "Name": "kxc-alb"
            },
            "tags_all": {
              "Name": "kxc-alb"
            },
            "vpc_id": "vpc-0abd1178eea036236",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.kxc-public-1a",
            "aws_subnet.kxc-public-1b",
            "aws_subnet.kxc-public-1c",
            "aws_vpc.kxc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:851725492449:listener/app/lxc-alb/285d543fe5537b76/ad8d9e53dc0ccd31",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:851725492449:targetgroup/alb-tg/ad7d1396780446fe",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:851725492449:listener/app/lxc-alb/285d543fe5537b76/ad8d9e53dc0ccd31",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:851725492449:loadbalancer/app/lxc-alb/285d543fe5537b76",
            "mutual_authentication": [],
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "alb-listener"
            },
            "tags_all": {
              "Name": "alb-listener"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.kxc-alb",
            "aws_lb_target_group.alb-tg",
            "aws_security_group.alb-sg",
            "aws_subnet.kxc-public-1a",
            "aws_subnet.kxc-public-1b",
            "aws_subnet.kxc-public-1c",
            "aws_vpc.kxc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:851725492449:targetgroup/alb-tg/ad7d1396780446fe",
            "arn_suffix": "targetgroup/alb-tg/ad7d1396780446fe",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:851725492449:targetgroup/alb-tg/ad7d1396780446fe",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "alb-tg"
            },
            "tags_all": {
              "Name": "alb-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0abd1178eea036236"
          },
          "dependencies": [
            "aws_vpc.kxc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kxc-rt-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725492449:route-table/rtb-022fcc97f5d136b6d",
            "id": "rtb-022fcc97f5d136b6d",
            "owner_id": "851725492449",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "kxc-rt-private"
            },
            "tags_all": {
              "Name": "kxc-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abd1178eea036236"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kxc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kxc-rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725492449:route-table/rtb-064d73fe33d2933c0",
            "id": "rtb-064d73fe33d2933c0",
            "owner_id": "851725492449",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f70691d7a9918fbd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kxc-rt-public"
            },
            "tags_all": {
              "Name": "kxc-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abd1178eea036236"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kxc-igw",
            "aws_vpc.kxc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7742286e4f3bda0",
            "route_table_id": "rtb-022fcc97f5d136b6d",
            "subnet_id": "subnet-0d9ebd4b44b2eb8f7"
          },
          "dependencies": [
            "aws_route_table.kxc-rt-private",
            "aws_subnet.kxc-private-1a",
            "aws_subnet.kxc-private-1b",
            "aws_subnet.kxc-private-1c",
            "aws_vpc.kxc-vpc"
          ]
        },
        {
          "index_key": "private2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a932cda7c90f469b",
            "route_table_id": "rtb-022fcc97f5d136b6d",
            "subnet_id": "subnet-032840ff2b437887b"
          },
          "dependencies": [
            "aws_route_table.kxc-rt-private",
            "aws_subnet.kxc-private-1a",
            "aws_subnet.kxc-private-1b",
            "aws_subnet.kxc-private-1c",
            "aws_vpc.kxc-vpc"
          ]
        },
        {
          "index_key": "private3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c076186eecaa5627",
            "route_table_id": "rtb-022fcc97f5d136b6d",
            "subnet_id": "subnet-027a0e2bd1e1fcccb"
          },
          "dependencies": [
            "aws_route_table.kxc-rt-private",
            "aws_subnet.kxc-private-1a",
            "aws_subnet.kxc-private-1b",
            "aws_subnet.kxc-private-1c",
            "aws_vpc.kxc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c2a5aed28d58908",
            "route_table_id": "rtb-064d73fe33d2933c0",
            "subnet_id": "subnet-0a867f2dee6d36409"
          },
          "dependencies": [
            "aws_internet_gateway.kxc-igw",
            "aws_route_table.kxc-rt-public",
            "aws_subnet.kxc-public-1a",
            "aws_subnet.kxc-public-1b",
            "aws_subnet.kxc-public-1c",
            "aws_vpc.kxc-vpc"
          ]
        },
        {
          "index_key": "public2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc7a68070a7d0aa5",
            "route_table_id": "rtb-064d73fe33d2933c0",
            "subnet_id": "subnet-0937020afc4682302"
          },
          "dependencies": [
            "aws_internet_gateway.kxc-igw",
            "aws_route_table.kxc-rt-public",
            "aws_subnet.kxc-public-1a",
            "aws_subnet.kxc-public-1b",
            "aws_subnet.kxc-public-1c",
            "aws_vpc.kxc-vpc"
          ]
        },
        {
          "index_key": "public3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca52bf09da48c5a8",
            "route_table_id": "rtb-064d73fe33d2933c0",
            "subnet_id": "subnet-0a6536bfe02d1c2a1"
          },
          "dependencies": [
            "aws_internet_gateway.kxc-igw",
            "aws_route_table.kxc-rt-public",
            "aws_subnet.kxc-public-1a",
            "aws_subnet.kxc-public-1b",
            "aws_subnet.kxc-public-1c",
            "aws_vpc.kxc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725492449:security-group/sg-0ee08455e1bd6c017",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee08455e1bd6c017",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "851725492449",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abd1178eea036236"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kxc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kxc-db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725492449:security-group/sg-0e2d387b58afeadc3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2d387b58afeadc3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05d3c59ad5596e74d",
                  "sg-0ee08455e1bd6c017"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "kxc-db-sg",
            "name_prefix": "",
            "owner_id": "851725492449",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kxc-db-sg"
            },
            "tags_all": {
              "Name": "kxc-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abd1178eea036236"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_security_group.kxc-fargate-sg",
            "aws_vpc.kxc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kxc-fargate-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725492449:security-group/sg-05d3c59ad5596e74d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d3c59ad5596e74d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "kxc-fargate-sg",
            "name_prefix": "",
            "owner_id": "851725492449",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kxc-fargate-sg"
            },
            "tags_all": {
              "Name": "kxc-fargate-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abd1178eea036236"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kxc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kxc-private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725492449:subnet/subnet-0d9ebd4b44b2eb8f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9ebd4b44b2eb8f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725492449",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kxc-private-1a"
            },
            "tags_all": {
              "Name": "kxc-private-1a"
            },
            "vpc_id": "vpc-0abd1178eea036236"
          },
          "dependencies": [
            "aws_vpc.kxc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kxc-private-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725492449:subnet/subnet-032840ff2b437887b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032840ff2b437887b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725492449",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kxc-private-1b"
            },
            "tags_all": {
              "Name": "kxc-private-1b"
            },
            "vpc_id": "vpc-0abd1178eea036236"
          },
          "dependencies": [
            "aws_vpc.kxc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kxc-private-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725492449:subnet/subnet-027a0e2bd1e1fcccb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027a0e2bd1e1fcccb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725492449",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kxc-private-1c"
            },
            "tags_all": {
              "Name": "kxc-private-1c"
            },
            "vpc_id": "vpc-0abd1178eea036236"
          },
          "dependencies": [
            "aws_vpc.kxc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kxc-public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725492449:subnet/subnet-0a867f2dee6d36409",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a867f2dee6d36409",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725492449",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kxc-public-1a"
            },
            "tags_all": {
              "Name": "kxc-public-1a"
            },
            "vpc_id": "vpc-0abd1178eea036236"
          },
          "dependencies": [
            "aws_vpc.kxc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kxc-public-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725492449:subnet/subnet-0937020afc4682302",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0937020afc4682302",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725492449",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kxc-public-1b"
            },
            "tags_all": {
              "Name": "kxc-public-1b"
            },
            "vpc_id": "vpc-0abd1178eea036236"
          },
          "dependencies": [
            "aws_vpc.kxc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kxc-public-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725492449:subnet/subnet-0a6536bfe02d1c2a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6536bfe02d1c2a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725492449",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kxc-public-1c"
            },
            "tags_all": {
              "Name": "kxc-public-1c"
            },
            "vpc_id": "vpc-0abd1178eea036236"
          },
          "dependencies": [
            "aws_vpc.kxc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kxc-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725492449:vpc/vpc-0abd1178eea036236",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fc4086a226a47804",
            "default_route_table_id": "rtb-06f7c06ae04b3239d",
            "default_security_group_id": "sg-0e07e05c435e8eaab",
            "dhcp_options_id": "dopt-056a4c0a24d76e52b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0abd1178eea036236",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06f7c06ae04b3239d",
            "owner_id": "851725492449",
            "tags": {
              "Name": "kxc-vpc"
            },
            "tags_all": {
              "Name": "kxc-vpc"
            }
          }
        }
      ]
    }
  ]
}